--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -607,6 +607,27 @@ input[readonly] {
 }
 
 
+.action-buttons {
+    display: flex;
+    gap: 5px;
+    justify-content: center;
+    align-items: center;
+}
+
+.action-buttons button {
+    border: none;
+    background: none;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.action-buttons .save-btn {
+    color: green;
+}
+
+.action-buttons .cancel-btn {
+    color: red;
+}
 
 
 
