--- a/app/templates/auth/attendance.html
+++ b/app/templates/auth/attendance.html
@@ -74,7 +74,7 @@
     <div class="container">
         <h4 id="current-datetime"></h4>
         <h1>Attendance Check In/Out</h1>
-        <h3>If the website is offline, check attendance using an Excel file</h3>
+        <h4>If the website is offline, check attendance using an Excel file</h4><br>
         <p id="status-message"></p>
         <input type="text" id="cardNumber" placeholder="Waiting for card scan..." readonly><br>
         <button id="btn-checkin" class="btn" onclick="handleAction('checkin')">Check In</button>
