--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -46,13 +46,8 @@
                 <div class="upload-container" id="attendanceUploadContainer">
                     <div class="upload-text">
                         Please upload an Excel file with the sheet name <b>Clock_IO</b>.<br>
-                        The sheet must have the following headers: <b>CARD UID</b>, <b>Name</b>, <b>Date</b>, <b>Time</b>, <b>In/Out</b>.<br>
-                        Click below to upload, or drag and drop a file (accepted formats: <b>XLSX, XLS, XLSM</b>).
-                    </div><br>
-
-                    <div class="upload-text">
-                        Please upload a file with sheets name call as 'Clock_IO'
-                        and with the header of ['CARD UID', 'Name', 'Date', 'Time', 'In/Out']
+                        Data should begin from columns <b>A to E</b>, with headers as follows:<br><br>
+                        <i>['CARD UID', 'Name', 'Date', 'Time', 'In/Out']</i><br><br>
                         Click below to upload, or drag and drop a file (accepted formats: <b>XLSX, XLS, XLSM</b>).
                     </div><br>
                     <div id="attendanceSelectedFileName" class="file-name-display"></div>
