--- a/app/templates/admin/adminHomepage.html
+++ b/app/templates/admin/adminHomepage.html
@@ -18,7 +18,7 @@
     </a>
     <a href="{{ url_for('admin_manageStaff')}}" style="text-decoration: none;">
         <div class="menu-section">
-            <h2>Manage Lecturer</h2>
+            <h2>Manage Staff</h2>
             <ul class="submenu">
                 <strong>Purpose:</strong>
                 <ul>    
