--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -155,7 +155,13 @@
                         <td>{{ c.report.exam.examStartTime.strftime("%A") }} - {{ c.report.exam.examEndTime.strftime("%A") }}</td>
                         <td>{{ c.report.exam.examStartTime.strftime("%H:%M") }} - {{ c.report.exam.examEndTime.strftime("%H:%M") }}</td>
                         <td>{{ (c.report.exam.examEndTime - c.report.exam.examStartTime).seconds // 3600 }}h {{ ((c.report.exam.examEndTime - c.report.exam.examStartTime).seconds % 3600) // 60 }}m</td>
-                        <td>None</td>
+                        <td>
+                            {% if c.report.exam.venue_availabilities %}
+                                {% for va in c.report.exam.venue_availabilities %}
+                                    <strong>: {{ va.venueNumber }} [Capacity Use: {{ va.capacity }}]</strong><br>
+                                {% endfor %}
+                            {% else %}
+                        </td>
                         <td>{{ c.report.exam.course.courseName }}</td>
                         <td>{{ c.report.exam.course.courseCodeSectionIntake }}</td>
                     </tr>
