--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -94,7 +94,7 @@
 
         <!-- Button frame with standard-->
         <div class="button-frame">
-            <button type="submit" name="register">Submit</button>
+            <button type="submit" name="register">Register</button>
             <br><br>
             <a href="{{ url_for('login') }}">Back to Login</a>
         </div>
